Added sidebar with table & tests

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+    <link href="table-component.css" rel="stylesheet">
   </head>
-  <body>
+  <body id="body">
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
